<resources>
    <string name="app_name">Kampung Unite</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="grocery_lists">My Grocery Lists</string>
    <string name="groups">My Groups</string>
    <string name="greeting">Hello, User!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="be_buyer">Become A Buyer</string>
    <string name="find_match">Find Match</string>
    <string name="logout">Logout</string>
    <string name="subtotal">Subtotal</string>
    <string name="gst">GST 7%</string>
    <string name="service_fee">Service fee 5%</string>
    <string name="total">Total</string>
    <string name="complete_payment">Complete Payment</string>
    <string name="payment_status_complete">*Payment is completed</string>
    <string name="payment_status_waiting_buyer">*Buyer\'s confirmation for payment complete is still pending</string>
    <string name="receive_payment">Payment\nReceived</string>
    <string name="transaction_complete">Transaction Completed</string>
    <string name="pending_payment">Pending Pick Up</string>
    <string name="receive_payment_confirm_msg">Have you received the payment from hitcher for this request?</string>
    <string name="user_base_url">http://10.0.2.2:8080/user/</string>
<!--    <string name="user_base_url">http://kampungunite-env.eba-ze5mmppd.us-east-1.elasticbeanstalk.com/user/</string>-->
    <string name="finish_shopping">Finish Shopping</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="base_url">http://10.0.2.2:8080/</string>
<!--    <string name="base_url">http://kampungunite-env.eba-ze5mmppd.us-east-1.elasticbeanstalk.com/</string>-->
    <string name="cpl_base_url">http://10.0.2.2:8080/cplist/</string>
<!--    <string name="cpl_base_url">http://kampungunite-env.eba-ze5mmppd.us-east-1.elasticbeanstalk.com/cplist/</string>-->
    <string name="qty">Qty</string>
    <string name="discount">Discount</string>
    <string name="subtotal_excl_disc">Subtotal (Excl. Discount)</string>
    <string name="submit">Submit</string>
    <string name="get_list_id">cplist/getlist/_id=</string>
</resources>