<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_grocerylists"
            android:title="@string/grocery_lists" />
        <item
            android:id="@+id/nav_groups"
            android:title="@string/groups" />
<!--        <item-->
<!--            android:id="@+id/nav_update_price"-->
<!--            android:title="Update Price" />-->
<!--        <item-->
<!--            android:id="@+id/nav_combined_list"-->
<!--            android:title="Shopping List"/>-->
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />

    </group>
</menu>