<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CombinedListFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">


        <TextView
            android:text="@string/item_name"
            android:textSize="18sp"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_margin="15dp"
            android:layout_gravity="center_vertical"
            android:textAppearance="?attr/textAppearanceListItem"/>

        <TextView
            android:text="@string/quantity"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:textAppearance="?attr/textAppearanceListItem" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="70dp"
        tools:context=".MainActivity">

        <ListView
            android:id="@+id/CL_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="8dp"
            tools:listitem="@layout/combined_item" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish_shopping_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:backgroundTint="@color/Kampong_Yellow"
        android:text="@string/finish_shopping"
        android:textColor="@color/Kampong_Blue" />

</FrameLayout>